--- a/action.yml
+++ b/action.yml
@@ -132,7 +132,7 @@ runs:
     # Note: It is currently not possible to get the URL for the uploaded asset
     - name: Upload the rl-scanner report
       if: success() || failure()
-      uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
+      uses: actions/upload-artifact@v3.1.3
       with:
         name: "report-${{ inputs.ref-sha }}"
         path: "${{ inputs.report-path }}"
@@ -141,7 +141,7 @@ runs:
     # Upload the secure.software SARIF report to GitHub
     - name: Upload the SARIF report
       if: success() || failure()
-      uses: github/codeql-action/upload-sarif@007d2a85e0e57ca0a01303f5f5989cabb605c8fe # v2.15.2
+      uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: "${{ inputs.report-path }}/report.sarif.json"
         category: rl-secure-scanner
